--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 .Layout-main {
-  min-height: 98vh;
+  min-height: 97vh;
   color: #454545;
   background-color: orange;
   display: flex;
